[build-system]
requires = ["setuptools >= 64", "setuptools-scm",
            "numpy >= 1.6",
            "pymatgen >= 2021"]
build-backend = "setuptools.build_meta"

[project]
name = "BGWpy"
license = {file = 'license.txt'}
version = '3.2.3'
description = 'Interface BerkeleyGW flows in python.'
authors = [
    {name = 'Gabriel Antonius', email = 'gabriel.antonius@gmail.com'},
    {name = 'Daan Holleman', email = 'dholleman123@gmail.com'},
]
readme = 'README.md'


[project.urls]
Repository = 'https://github.com/BerkeleyGW/BGWpy'

[tool.setuptools.packages.find]
where = ['BGWpy']
include = ['data/structures/*', 'data/pseudos/*']

[tool.setuptools.package-data]
config = ['config/BGWpyrc']

[tool.setuptools]
include-package-data = true

[project.scripts]
BGWpy_make_config_file = "BGWpy.scripts.BGWpy_make_config_file:main"
BGWpy_make_launch_script = "BGWpy.scripts.BGWpy_make_launch_script:main"

